<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyPasswords</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="act_login_hint_login">Login</string>
    <string name="act_login_hint_password">Password</string>

    <string name="act_login_text_btn_login">Log in</string>
    <string name="act_login_top_text">MyPasswords</string>

    <string name="act_login_form_error">Empty field</string>

    <string name="act_main_add_new_account_title">Add New Account</string>
    <string name="act_main_add_edit_account_title">Edit Account</string>
    <string name="act_main_http_address">Http address</string>
    <string name="act_main_btn_add_new_account">Add</string>
    <string name="act_main_btn_edit_account">Edit</string>
    <string name="act_main_account_name">Name</string>

    <string name="dialog_btn_cancel_text">Cancel</string>
    <string name="dialog_btn_create_user_text">Create User</string>
    <string name="dialog_btn_ok_text">OK</string>

    <string name="dialog_title_create_user">Create New User</string>

    <string name="dialog_message_first_start">Application was launched at first time and you don\'t have any account yet. To create new user enter credentials for your user and click \"Log in\" button.</string>

</resources>
