<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/act_login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/act_login_top_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/act_login_form_margin_bottom"
        android:orientation="horizontal"
        android:weightSum="20">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="7" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="13"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="20">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/act_default_margin"
                    android:layout_weight="8"
                    android:textStyle="italic"
                    android:gravity="right"
                    android:paddingLeft="@dimen/act_default_margin"
                    android:text="@string/act_login_hint_login"
                    android:textColor="@color/act_text_color" />


                <EditText
                    android:id="@+id/etLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/act_default_margin"
                    android:layout_weight="12"
                    android:background="@drawable/act_login_textform_bg"
                    android:paddingLeft="@dimen/act_default_margin"
                    android:textColor="@color/act_text_color"
                    android:textColorHint="@color/act_text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="20">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/act_default_margin"
                    android:layout_weight="8"
                    android:gravity="right"
                    android:paddingLeft="@dimen/act_default_margin"
                    android:textStyle="italic"
                    android:text="@string/act_login_hint_password"
                    android:textColor="@color/act_text_color" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/act_default_margin"
                    android:layout_weight="12"
                    android:background="@drawable/act_login_textform_bg"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/act_default_margin"
                    android:textColor="@color/act_text_color"
                    android:textColorHint="@color/act_text_color" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/act_login_textform_bg"
                android:text="@string/act_login_text_btn_login"
                android:textStyle="italic"
                android:textColor="@color/act_text_color" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
